--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
+{
+  "manifest_version": 3,
+  "name": "Cookie Clicker Achievements Unlocker",
+  "version": "1.0",
+  "description": "Unlocks all achievements in Cookie Clicker.",
+  "permissions": ["activeTab", "scripting"],
+  "content_scripts": [
+    {
+      "matches": ["https://orteil.dashnet.org/cookieclicker/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
+    }
+  ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
+}
 
